fixed issue with button appearance on safari ios

--- a/styles/ContactForm.module.scss
+++ b/styles/ContactForm.module.scss
@@ -48,6 +48,7 @@
         margin-top: 25px;
         border-radius: 10px;
         height: 60px;
+        background-color: var(--primary-color);
 
         
 
@@ -55,7 +56,7 @@
             grid-area: full-start / full-start / svg-end / svg-end;
             height: 60px;
             width: 100%;
-            background-color: var(--primary-color);
+            background-color: rgba(255,255,255,0);
 
             color: var(--lightest-aqua);
             border-radius: 10px;
@@ -76,7 +77,7 @@
                 
                 height: 60px;
                 width: 100%;
-                background-color: transparent;
+                background-color: rgba(255,255,255,0); //instead of transparent, safari mobile issue
                 color: var(--lightest-aqua);
                 border-radius: 0px 10px 10px 0px;
                 border: none;
